--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="style.css">
     <title>Sauge for Coffee</title>
 </head>
 
@@ -69,7 +69,56 @@
                 </div>
             </div>
         </div>
+        <div class="home-info container d-f jc-sb align-center">
+            <div class="home-info-item">put some fire in your belly</div>
+            <div><img src="images/home-main-pattern.png" alt="home-main-pattern"></div>
+            <div class="home-info-item">put some fire in your belly</div>
+            <div><img src="images/home-main-pattern.png" alt="home-main-pattern"></div>
+            <div class="home-info-item">put some fire in your belly</div>
+            <div><img src="images/home-main-pattern.png" alt="home-main-pattern"></div>
+            <div class="home-info-item">put some fire in your belly</div>
+            <div><img src="images/home-main-pattern.png" alt="home-main-pattern"></div>
+        </div>
+        <div class="home-promo container"><img src="images/home-promo.png" alt="home-promo"></div>
+        <div class="home-story container d-f">
+            <div class="home-story-caption">
+                <h3 class="home-story-title">The story behind the souce</h3>
+                <div><img src="images/story.png" alt="story"></div>
+            </div>
+            <div class="home-story-content">
+                <p class="home-story-desc">
+                    HELLO, I'M LAUREN AND AS A LIFELONG ADVENTUROUS EATER, I'VE TRIED A LOT OF CRAZY THINGS, BUT I NEVER
+                    THOUGHT HOT SAUCE IN COFFEE WAS A SANE OPTION UNTIL A FRIEND DARED ME TO TRY IT.
+                </p>
+                <div class="home-story-desc">AND IT SUCKED.</div>
+                <div class="home-story-desc">
+                    BUT I WONDERED IF THERE WAS A WAY TO ADD SPICE TO MY COFFEE. WHEN THERE WAS NO EASY SOLUTION, UJJO
+                    WAS BORN.
+                </div>
+                <div class="home-story-desc">
+                    UJJO (OOO-JOE): THE WORD FOR “FIRE” IN KONKANI, SPOKEN ON THE WEST COAST OF INDIA, IS AN HOMAGE AND
+                    A LOVE LETTER TO MY DAD, AN INDIAN IMMIGRANT WHO INSTILLED A FIRE IN MY PALATE – AND MY HEART – FROM
+                    THE VERY BEGINNING.
+                </div>
+            </div>
+        </div>
+        <div class="home-info container d-f jc-sb align-center">
+            <div class="home-info-item">CONTACT FOR PARTNERSHIP OPPORTUNITIES</div>
+            <div><img src="images/home-main-pattern.png" alt="home-main-pattern"></div>
+            <div class="home-info-item">download our media kit</div>
+            <div><img src="images/home-main-pattern.png" alt="home-main-pattern"></div>
+            <div class="home-info-item">CONTACT FOR PARTNERSHIP OPPORTUNITIES</div>
+            <div><img src="images/home-main-pattern.png" alt="home-main-pattern"></div>
+        </div>
     </main>
+    <footer class="footer container">
+        <div><img src="images/footer-logo.png" alt="footer-logo"></div>
+        <div class="footer-bar d-f jc-sb">
+            <a href="#" class="footer-link">Privacy</a>
+            <div class="footer-location">ujjo llc, columbus oh, 43219</div>
+            <a href="#" class="footer-link">Instagram</a>
+        </div>
+    </footer>
 
 </body>
 
