edit Info block

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </div>
-        <div class="home-info container d-f jc-sb align-center">
+        <div class="home-info container d-f jc-sb align-center" style="gap: 23px;">
             <div class="home-info-item">put some fire in your belly</div>
             <div><img src="images/home-main-pattern.png" alt="home-main-pattern"></div>
             <div class="home-info-item">put some fire in your belly</div>
